# baxter_pick_and_place

./: CMakeLists.txt  README.md  baxter_launch.launch~  baxter_launch_wip.launch~  package.xml
launch/: baxter_launch.launch  baxter_launch_wip.launch  baxter_launch_wip.launch~  baxter_vis_launch.launch  baxter_vis_launch.launch~  baxter_vis_usb_launch.launch  baxter_vis_usb_launch.launch~  indiv_tag_baxter.launch  indiv_tag_baxter.launch~  indiv_test_usb_cam.launch  indiv_test_usb_cam.launch~
src/: ar_track_alvar_msgs  baxter_vis_node.py~  functions.py  head_state_node.py~  left_arm.py  move_to_goal.py  move_to_laser.py  move_to_object.py  move_to_object_left.py  moveit_tutorial.py  publish_block_data.py  publish_block_dropoff.py  publish_block_pickup1.py  publish_block_pickup2.py  publish_block_pickup3.py  publish_block_pickup_n1.py  publish_block_pickup_n2.py  publish_block_pickup_n3.py  publish_left_dropoff.py  publish_left_pickup1.py  publish_left_pickup2.py  publish_transform.py  quat.py  test.py  test2.py  xdisplay_pub.py~
src/scripts/: baxter_vis_node.py  baxter_vis_node.py~  baxter_vis_node1.py  get_tag_pose.py  get_tag_pose.py~  head_state_node.py  image_pub_slow.py  image_pub_slow.py~  pose_msg.py  pose_msg.py~  test_launch.launch~  xdisplay_pub.py  xdisplay_pub.py~  xdisplay_pub_bax.py  xdisplay_pub_bax.py~
